// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecurityStack Construct(SecurityStack):  Snapshot Test 1`] = `
{
  "Parameters": {
    "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/accelerator/kms/cloudwatch/key-arn",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AWSAcceleratormetadatacollectionLogGroup76F89C67": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsKeyId": {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": "/aws/lambda/AWSAccelerator-metadata-collection",
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "AcceleratorMetadataAWSAcceleratormetadatacollectionEBD85CF6": {
      "DependsOn": [
        "AcceleratorMetadataMetadataLambdaDefaultPolicy03C222B6",
        "AcceleratorMetadataMetadataLambdaC27FFAF6",
        "AWSAcceleratormetadatacollectionLogGroup76F89C67",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Environment": {
          "Variables": {
            "ACCELERATOR_PREFIX": "AWSAccelerator",
            "ACCELERATOR_VERSION_SSM_PATH": "/accelerator/AWSAccelerator-InstallerStack/version",
            "CENTRAL_LOG_BUCKET": "aws-accelerator-central-logs-333333333333-us-west-2",
            "CONFIG_REPOSITORY_NAME": "aws-accelerator-config",
            "CROSS_ACCOUNT_ROLE": "AWSControlTowerExecution",
            "ELB_LOGGING_BUCKET": "aws-accelerator-elb-access-logs-333333333333-us-west-2",
            "GLOBAL_REGION": "us-east-1",
            "LOG_ACCOUNT_ID": "333333333333",
            "METADATA_BUCKET": "aws-accelerator-metadata-333333333333-us-east-1",
            "ORGANIZATION_ID": "o-asdf123456",
            "PARTITION": {
              "Ref": "AWS::Partition",
            },
          },
        },
        "FunctionName": "AWSAccelerator-metadata-collection",
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "AcceleratorMetadataMetadataLambdaC27FFAF6",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 600,
      },
      "Type": "AWS::Lambda::Function",
    },
    "AcceleratorMetadataAwsAcceleratorMetadataCollectionRule1FFE12D2": {
      "Properties": {
        "Name": "AWSAccelerator-metadata-collection-rule",
        "ScheduleExpression": "rate(1 day)",
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "AcceleratorMetadataAWSAcceleratormetadatacollectionEBD85CF6",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "AcceleratorMetadataAwsAcceleratorMetadataCollectionRuleAllowEventRuleAWSAcceleratorSecurityStack111111111111useast1AcceleratorMetadataAWSAcceleratormetadatacollection72A1EADD690CC386": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "AcceleratorMetadataAWSAcceleratormetadatacollectionEBD85CF6",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "AcceleratorMetadataAwsAcceleratorMetadataCollectionRule1FFE12D2",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "AcceleratorMetadataMetadataLambdaC27FFAF6": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "RoleName": "AWSAccelerator-111111111111-us-east-1-metadata-lambda-role",
      },
      "Type": "AWS::IAM::Role",
    },
    "AcceleratorMetadataMetadataLambdaDefaultPolicy03C222B6": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-IAM5",
              "reason": "accelerator metadata collection custom resource",
            },
          ],
        },
      },
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "codepipeline:GetPipelineExecution",
                "codepipeline:ListPipelineExecutions",
                "codecommit:GetFolder",
                "codecommit:GetFile",
                "kms:DescribeKey",
                "kms:Decrypt",
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
                "kms:ListAliases",
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
                "organizations:DescribeOrganizationalUnit",
                "organizations:DescribeAccount",
                "organizations:ListAccounts",
                "organizations:ListChildren",
                "organizations:ListOrganizationalUnitsForParent",
                "organizations:ListParents",
                "organizations:ListRoots",
                "ssm:GetParameter",
                "sts:AssumeRole",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObjectAcl",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::aws-accelerator-metadata-333333333333-us-east-1",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::aws-accelerator-metadata-333333333333-us-east-1/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AcceleratorMetadataMetadataLambdaDefaultPolicy03C222B6",
        "Roles": [
          {
            "Ref": "AcceleratorMetadataMetadataLambdaC27FFAF6",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AwsMacieUpdateExportConfigClassification832781E3": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CustomMaciePutClassificationExportConfigurationCustomResourceProviderLogGroup727354F4",
      ],
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomMaciePutClassificationExportConfigurationCustomResourceProviderHandlerC53E2FCC",
            "Arn",
          ],
        },
        "bucketName": "aws-accelerator-central-logs-333333333333-us-west-2",
        "keyPrefix": "macie/111111111111/",
        "kmsKeyArn": {
          "Ref": "CentralLogsBucketKeyLookup52CD8A37",
        },
        "region": "us-east-1",
      },
      "Type": "Custom::MaciePutClassificationExportConfiguration",
      "UpdateReplacePolicy": "Delete",
    },
    "CentralLogsBucketKeyLookup52CD8A37": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CustomSsmGetParameterValueCustomResourceProviderLogGroup780D220D",
      ],
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomSsmGetParameterValueCustomResourceProviderHandlerAAD0E7EE",
            "Arn",
          ],
        },
        "assumeRoleArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":iam::333333333333:role/AWSAccelerator-CentralBucket-KeyArnParam-Role",
            ],
          ],
        },
        "invokingAccountID": "111111111111",
        "invokingRegion": "us-east-1",
        "parameterAccountID": "333333333333",
        "parameterName": "/accelerator/logging/central-bucket/kms/arn",
        "parameterRegion": "us-west-2",
        "uuid": "REPLACED-UUID",
      },
      "Type": "Custom::SsmGetParameterValue",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomEbsDefaultVolumeEncryptionCustomResourceProviderHandler6551B35B": {
      "DependsOn": [
        "CustomEbsDefaultVolumeEncryptionCustomResourceProviderRole7A4FA6A8",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomEbsDefaultVolumeEncryptionCustomResourceProviderRole7A4FA6A8",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomEbsDefaultVolumeEncryptionCustomResourceProviderLogGroupB7212213": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsKeyId": {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "CustomEbsDefaultVolumeEncryptionCustomResourceProviderHandler6551B35B",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomEbsDefaultVolumeEncryptionCustomResourceProviderRole7A4FA6A8": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "ec2:DisableEbsEncryptionByDefault",
                    "ec2:EnableEbsEncryptionByDefault",
                    "ec2:ModifyEbsDefaultKmsKeyId",
                    "ec2:ResetEbsDefaultKmsKeyId",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                  "Sid": "EC2",
                },
                {
                  "Action": [
                    "kms:DescribeKey",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::GetAtt": [
                      "EbsEncryptionKey9149E0DA",
                      "Arn",
                    ],
                  },
                  "Sid": "KMS",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderHandlerB3AE4CE8": {
      "DependsOn": [
        "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderRoleD01DD26B",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderRoleD01DD26B",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderLogGroup118A06DB": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsKeyId": {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderHandlerB3AE4CE8",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderRoleD01DD26B": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "guardDuty:CreateDetector",
                    "guardDuty:CreatePublishingDestination",
                    "guardDuty:DeletePublishingDestination",
                    "guardDuty:UpdatePublishingDestination",
                    "guardDuty:ListDetectors",
                    "guardDuty:ListPublishingDestinations",
                    "guardduty:DescribePublishingDestination",
                    "iam:CreateServiceLinkedRole",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                  "Sid": "GuardDutyCreatePublishingDestinationCommandTaskGuardDutyActions",
                },
                {
                  "Action": [
                    "s3:ListBucket",
                    "s3:GetObject",
                  ],
                  "Effect": "Allow",
                  "Resource": [
                    {
                      "Fn::Join": [
                        "",
                        [
                          "arn:",
                          {
                            "Ref": "AWS::Partition",
                          },
                          ":s3:::aws-accelerator-central-logs-333333333333-us-west-2/guardduty",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          "arn:",
                          {
                            "Ref": "AWS::Partition",
                          },
                          ":s3:::aws-accelerator-central-logs-333333333333-us-west-2/guardduty/*",
                        ],
                      ],
                    },
                  ],
                  "Sid": "GuardDutyCreateBucketPrefix",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderHandler63EDC7F4": {
      "DependsOn": [
        "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderRoleC4ECAFE0",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderRoleC4ECAFE0",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderLogGroup69C2279A": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsKeyId": {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderHandler63EDC7F4",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderRoleC4ECAFE0": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "iam:UpdateAccountPasswordPolicy",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomMaciePutClassificationExportConfigurationCustomResourceProviderHandlerC53E2FCC": {
      "DependsOn": [
        "CustomMaciePutClassificationExportConfigurationCustomResourceProviderRoleEB42D531",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomMaciePutClassificationExportConfigurationCustomResourceProviderRoleEB42D531",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomMaciePutClassificationExportConfigurationCustomResourceProviderLogGroup727354F4": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsKeyId": {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "CustomMaciePutClassificationExportConfigurationCustomResourceProviderHandlerC53E2FCC",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomMaciePutClassificationExportConfigurationCustomResourceProviderRoleEB42D531": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "macie2:EnableMacie",
                    "macie2:GetClassificationExportConfiguration",
                    "macie2:GetMacieSession",
                    "macie2:PutClassificationExportConfiguration",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                  "Sid": "MaciePutClassificationExportConfigurationTaskMacieActions",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomSecurityHubBatchEnableStandardsCustomResourceProviderHandler4BE622C1": {
      "DependsOn": [
        "CustomSecurityHubBatchEnableStandardsCustomResourceProviderRole1ABC8ED2",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomSecurityHubBatchEnableStandardsCustomResourceProviderRole1ABC8ED2",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomSecurityHubBatchEnableStandardsCustomResourceProviderLogGroup51D3B0EA": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsKeyId": {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "CustomSecurityHubBatchEnableStandardsCustomResourceProviderHandler4BE622C1",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomSecurityHubBatchEnableStandardsCustomResourceProviderRole1ABC8ED2": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "securityhub:BatchDisableStandards",
                    "securityhub:BatchEnableStandards",
                    "securityhub:DescribeStandards",
                    "securityhub:DescribeStandardsControls",
                    "securityhub:EnableSecurityHub",
                    "securityhub:GetEnabledStandards",
                    "securityhub:UpdateStandardsControl",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                  "Sid": "SecurityHubCreateMembersTaskSecurityHubActions",
                },
                {
                  "Action": [
                    "iam:CreateServiceLinkedRole",
                  ],
                  "Condition": {
                    "StringLike": {
                      "iam:AWSServiceName": "securityhub.amazonaws.com",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                  "Sid": "SecurityHubServiceLinkedRole",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomSsmGetParameterValueCustomResourceProviderHandlerAAD0E7EE": {
      "DependsOn": [
        "CustomSsmGetParameterValueCustomResourceProviderRoleB3AFDDB2",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomSsmGetParameterValueCustomResourceProviderRoleB3AFDDB2",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomSsmGetParameterValueCustomResourceProviderLogGroup780D220D": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "CustomSsmGetParameterValueCustomResourceProviderHandlerAAD0E7EE",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomSsmGetParameterValueCustomResourceProviderRoleB3AFDDB2": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "ssm:GetParameters",
                    "ssm:GetParameter",
                    "ssm:DescribeParameters",
                  ],
                  "Effect": "Allow",
                  "Resource": [
                    "*",
                  ],
                  "Sid": "SsmGetParameterActions",
                },
                {
                  "Action": [
                    "sts:AssumeRole",
                  ],
                  "Effect": "Allow",
                  "Resource": [
                    {
                      "Fn::Join": [
                        "",
                        [
                          "arn:",
                          {
                            "Ref": "AWS::Partition",
                          },
                          ":iam::*:role/AWSAccelerator*",
                        ],
                      ],
                    },
                  ],
                  "Sid": "StsAssumeRoleActions",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "EbsDefaultVolumeEncryption55012F7A": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CustomEbsDefaultVolumeEncryptionCustomResourceProviderLogGroupB7212213",
      ],
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomEbsDefaultVolumeEncryptionCustomResourceProviderHandler6551B35B",
            "Arn",
          ],
        },
        "kmsKeyId": {
          "Ref": "EbsEncryptionKey9149E0DA",
        },
      },
      "Type": "Custom::EbsDefaultVolumeEncryption",
      "UpdateReplacePolicy": "Delete",
    },
    "EbsDefaultVolumeEncryptionParameter61CF6625": {
      "Properties": {
        "Name": "/accelerator/security-stack/ebsDefaultVolumeEncryptionKeyArn",
        "Type": "String",
        "Value": {
          "Fn::GetAtt": [
            "EbsEncryptionKey9149E0DA",
            "Arn",
          ],
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "EbsEncryptionKey9149E0DA": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "Description": "AWS Accelerator default EBS Volume Encryption key",
        "EnableKeyRotation": true,
        "KeyPolicy": {
          "Statement": [
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::111111111111:root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:DescribeKey",
                "kms:Encrypt",
                "kms:GenerateDataKey*",
                "kms:ReEncrypt*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::111111111111:role/aws-service-role/autoscaling.amazonaws.com/AWSServiceRoleForAutoScaling",
                    ],
                  ],
                },
              },
              "Resource": "*",
              "Sid": "Allow service-linked role use",
            },
            {
              "Action": "kms:CreateGrant",
              "Condition": {
                "Bool": {
                  "kms:GrantIsForAWSResource": "true",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::111111111111:role/aws-service-role/autoscaling.amazonaws.com/AWSServiceRoleForAutoScaling",
                    ],
                  ],
                },
              },
              "Resource": "*",
              "Sid": "Allow Autoscaling to create grant",
            },
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::111111111111:root",
                    ],
                  ],
                },
              },
              "Resource": "*",
              "Sid": "Account Access",
            },
            {
              "Action": "kms:*",
              "Condition": {
                "StringEquals": {
                  "kms:CallerAccount": "111111111111",
                  "kms:ViaService": {
                    "Fn::Join": [
                      "",
                      [
                        "ec2.us-east-1.",
                        {
                          "Ref": "AWS::URLSuffix",
                        },
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": "*",
              },
              "Resource": "*",
              "Sid": "ec2",
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:DescribeKey",
                "kms:Encrypt",
                "kms:GenerateDataKey*",
                "kms:ReEncrypt*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::111111111111:role/aws-service-role/cloud9.amazonaws.com/AWSServiceRoleForAWSCloud9",
                    ],
                  ],
                },
              },
              "Resource": "*",
              "Sid": "Allow cloud9 service-linked role use",
            },
            {
              "Action": [
                "kms:CreateGrant",
                "kms:ListGrants",
                "kms:RevokeGrant",
              ],
              "Condition": {
                "Bool": {
                  "kms:GrantIsForAWSResource": "true",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::111111111111:role/aws-service-role/cloud9.amazonaws.com/AWSServiceRoleForAWSCloud9",
                    ],
                  ],
                },
              },
              "Resource": "*",
              "Sid": "Allow cloud9 attachment of persistent resources",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Retain",
    },
    "EbsEncryptionKeyAlias4A392FEE": {
      "Properties": {
        "AliasName": "alias/accelerator/ebs/default-encryption/key",
        "TargetKeyId": {
          "Fn::GetAtt": [
            "EbsEncryptionKey9149E0DA",
            "Arn",
          ],
        },
      },
      "Type": "AWS::KMS::Alias",
    },
    "GuardDutyPublishingDestination52AE4412": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderLogGroup118A06DB",
      ],
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderHandlerB3AE4CE8",
            "Arn",
          ],
        },
        "destinationArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":s3:::aws-accelerator-central-logs-333333333333-us-west-2/guardduty",
            ],
          ],
        },
        "exportDestinationOverride": true,
        "exportDestinationType": "S3",
        "kmsKeyArn": {
          "Ref": "CentralLogsBucketKeyLookup52CD8A37",
        },
        "region": "us-east-1",
      },
      "Type": "Custom::GuardDutyCreatePublishingDestinationCommand",
      "UpdateReplacePolicy": "Delete",
    },
    "IamPasswordPolicy7117FCDB": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderLogGroup69C2279A",
      ],
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderHandler63EDC7F4",
            "Arn",
          ],
        },
        "allowUsersToChangePassword": true,
        "hardExpiry": false,
        "maxPasswordAge": 90,
        "minimumPasswordLength": 14,
        "passwordReusePrevention": 24,
        "requireLowercaseCharacters": true,
        "requireNumbers": true,
        "requireSymbols": true,
        "requireUppercaseCharacters": true,
      },
      "Type": "Custom::IamUpdateAccountPasswordPolicy",
      "UpdateReplacePolicy": "Delete",
    },
    "SecurityHubStandards294083BB": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CustomSecurityHubBatchEnableStandardsCustomResourceProviderLogGroup51D3B0EA",
      ],
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomSecurityHubBatchEnableStandardsCustomResourceProviderHandler4BE622C1",
            "Arn",
          ],
        },
        "region": "us-east-1",
        "standards": [
          {
            "controlsToDisable": [
              "IAM.1",
              "EC2.10",
              "Lambda.4",
            ],
            "enable": true,
            "name": "AWS Foundational Security Best Practices v1.0.0",
          },
          {
            "controlsToDisable": [
              "PCI.IAM.3",
              "PCI.S3.3",
              "PCI.EC2.3",
              "PCI.Lambda.2",
            ],
            "enable": true,
            "name": "PCI DSS v3.2.1",
          },
          {
            "controlsToDisable": [
              "CIS.1.20",
              "CIS.1.22",
              "CIS.2.6",
            ],
            "enable": true,
            "name": "CIS AWS Foundations Benchmark v1.2.0",
          },
        ],
      },
      "Type": "Custom::SecurityHubBatchEnableStandards",
      "UpdateReplacePolicy": "Delete",
    },
    "SsmParamAcceleratorVersionFF83282D": {
      "Properties": {
        "Name": "/accelerator/AWSAccelerator-SecurityStack-111111111111-us-east-1/version",
        "Type": "String",
        "Value": "1.4.3",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "SsmParamStackId521A78D3": {
      "Properties": {
        "Name": "/accelerator/AWSAccelerator-SecurityStack-111111111111-us-east-1/stack-id",
        "Type": "String",
        "Value": {
          "Ref": "AWS::StackId",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
  },
}
`;

exports[`delegatedAdminStack Construct(SecurityStack):  Snapshot Test 1`] = `
{
  "Parameters": {
    "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/accelerator/kms/cloudwatch/key-arn",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValueacceleratorkmskey1keyarnC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/accelerator/kms/key1/key-arn",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AWSAcceleratormetadatacollectionLogGroup76F89C67": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsKeyId": {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": "/aws/lambda/AWSAccelerator-metadata-collection",
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "AcceleratorMetadataAWSAcceleratormetadatacollectionEBD85CF6": {
      "DependsOn": [
        "AcceleratorMetadataMetadataLambdaDefaultPolicy03C222B6",
        "AcceleratorMetadataMetadataLambdaC27FFAF6",
        "AWSAcceleratormetadatacollectionLogGroup76F89C67",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Environment": {
          "Variables": {
            "ACCELERATOR_PREFIX": "AWSAccelerator",
            "ACCELERATOR_VERSION_SSM_PATH": "/accelerator/AWSAccelerator-InstallerStack/version",
            "CENTRAL_LOG_BUCKET": "aws-accelerator-central-logs-333333333333-us-west-2",
            "CONFIG_REPOSITORY_NAME": "aws-accelerator-config",
            "CROSS_ACCOUNT_ROLE": "AWSControlTowerExecution",
            "ELB_LOGGING_BUCKET": "aws-accelerator-elb-access-logs-333333333333-us-west-2",
            "GLOBAL_REGION": "us-east-1",
            "LOG_ACCOUNT_ID": "333333333333",
            "METADATA_BUCKET": "aws-accelerator-metadata-333333333333-us-east-1",
            "ORGANIZATION_ID": "o-asdf123456",
            "PARTITION": {
              "Ref": "AWS::Partition",
            },
          },
        },
        "FunctionName": "AWSAccelerator-metadata-collection",
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "AcceleratorMetadataMetadataLambdaC27FFAF6",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 600,
      },
      "Type": "AWS::Lambda::Function",
    },
    "AcceleratorMetadataAwsAcceleratorMetadataCollectionRule1FFE12D2": {
      "Properties": {
        "Name": "AWSAccelerator-metadata-collection-rule",
        "ScheduleExpression": "rate(1 day)",
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "AcceleratorMetadataAWSAcceleratormetadatacollectionEBD85CF6",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "AcceleratorMetadataAwsAcceleratorMetadataCollectionRuleAllowEventRuleAWSAcceleratorSecurityStack111111111111useast1AcceleratorMetadataAWSAcceleratormetadatacollection72A1EADD690CC386": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "AcceleratorMetadataAWSAcceleratormetadatacollectionEBD85CF6",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "AcceleratorMetadataAwsAcceleratorMetadataCollectionRule1FFE12D2",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "AcceleratorMetadataMetadataLambdaC27FFAF6": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "RoleName": "AWSAccelerator-111111111111-us-east-1-metadata-lambda-role",
      },
      "Type": "AWS::IAM::Role",
    },
    "AcceleratorMetadataMetadataLambdaDefaultPolicy03C222B6": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-IAM5",
              "reason": "accelerator metadata collection custom resource",
            },
          ],
        },
      },
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "codepipeline:GetPipelineExecution",
                "codepipeline:ListPipelineExecutions",
                "codecommit:GetFolder",
                "codecommit:GetFile",
                "kms:DescribeKey",
                "kms:Decrypt",
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
                "kms:ListAliases",
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
                "organizations:DescribeOrganizationalUnit",
                "organizations:DescribeAccount",
                "organizations:ListAccounts",
                "organizations:ListChildren",
                "organizations:ListOrganizationalUnitsForParent",
                "organizations:ListParents",
                "organizations:ListRoots",
                "ssm:GetParameter",
                "sts:AssumeRole",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObjectAcl",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::aws-accelerator-metadata-333333333333-us-east-1",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::aws-accelerator-metadata-333333333333-us-east-1/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AcceleratorMetadataMetadataLambdaDefaultPolicy03C222B6",
        "Roles": [
          {
            "Ref": "AcceleratorMetadataMetadataLambdaC27FFAF6",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AwsMacieUpdateExportConfigClassification832781E3": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CustomMaciePutClassificationExportConfigurationCustomResourceProviderLogGroup727354F4",
      ],
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomMaciePutClassificationExportConfigurationCustomResourceProviderHandlerC53E2FCC",
            "Arn",
          ],
        },
        "bucketName": "aws-accelerator-central-logs-333333333333-us-west-2",
        "keyPrefix": "macie/111111111111/",
        "kmsKeyArn": {
          "Ref": "CentralLogsBucketKeyLookup52CD8A37",
        },
        "region": "us-east-1",
      },
      "Type": "Custom::MaciePutClassificationExportConfiguration",
      "UpdateReplacePolicy": "Delete",
    },
    "CentralLogsBucketKeyLookup52CD8A37": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CustomSsmGetParameterValueCustomResourceProviderLogGroup780D220D",
      ],
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomSsmGetParameterValueCustomResourceProviderHandlerAAD0E7EE",
            "Arn",
          ],
        },
        "assumeRoleArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":iam::333333333333:role/AWSAccelerator-CentralBucket-KeyArnParam-Role",
            ],
          ],
        },
        "invokingAccountID": "111111111111",
        "invokingRegion": "us-east-1",
        "parameterAccountID": "333333333333",
        "parameterName": "/accelerator/logging/central-bucket/kms/arn",
        "parameterRegion": "us-west-2",
        "uuid": "REPLACED-UUID",
      },
      "Type": "Custom::SsmGetParameterValue",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomEbsDefaultVolumeEncryptionCustomResourceProviderHandler6551B35B": {
      "DependsOn": [
        "CustomEbsDefaultVolumeEncryptionCustomResourceProviderRole7A4FA6A8",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomEbsDefaultVolumeEncryptionCustomResourceProviderRole7A4FA6A8",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomEbsDefaultVolumeEncryptionCustomResourceProviderLogGroupB7212213": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsKeyId": {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "CustomEbsDefaultVolumeEncryptionCustomResourceProviderHandler6551B35B",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomEbsDefaultVolumeEncryptionCustomResourceProviderRole7A4FA6A8": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "ec2:DisableEbsEncryptionByDefault",
                    "ec2:EnableEbsEncryptionByDefault",
                    "ec2:ModifyEbsDefaultKmsKeyId",
                    "ec2:ResetEbsDefaultKmsKeyId",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                  "Sid": "EC2",
                },
                {
                  "Action": [
                    "kms:DescribeKey",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Ref": "SsmParameterValueacceleratorkmskey1keyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
                  },
                  "Sid": "KMS",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderHandlerB3AE4CE8": {
      "DependsOn": [
        "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderRoleD01DD26B",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderRoleD01DD26B",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderLogGroup118A06DB": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsKeyId": {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderHandlerB3AE4CE8",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderRoleD01DD26B": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "guardDuty:CreateDetector",
                    "guardDuty:CreatePublishingDestination",
                    "guardDuty:DeletePublishingDestination",
                    "guardDuty:UpdatePublishingDestination",
                    "guardDuty:ListDetectors",
                    "guardDuty:ListPublishingDestinations",
                    "guardduty:DescribePublishingDestination",
                    "iam:CreateServiceLinkedRole",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                  "Sid": "GuardDutyCreatePublishingDestinationCommandTaskGuardDutyActions",
                },
                {
                  "Action": [
                    "s3:ListBucket",
                    "s3:GetObject",
                  ],
                  "Effect": "Allow",
                  "Resource": [
                    {
                      "Fn::Join": [
                        "",
                        [
                          "arn:",
                          {
                            "Ref": "AWS::Partition",
                          },
                          ":s3:::aws-accelerator-central-logs-333333333333-us-west-2/guardduty",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          "arn:",
                          {
                            "Ref": "AWS::Partition",
                          },
                          ":s3:::aws-accelerator-central-logs-333333333333-us-west-2/guardduty/*",
                        ],
                      ],
                    },
                  ],
                  "Sid": "GuardDutyCreateBucketPrefix",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderHandler63EDC7F4": {
      "DependsOn": [
        "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderRoleC4ECAFE0",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderRoleC4ECAFE0",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderLogGroup69C2279A": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsKeyId": {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderHandler63EDC7F4",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderRoleC4ECAFE0": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "iam:UpdateAccountPasswordPolicy",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomMaciePutClassificationExportConfigurationCustomResourceProviderHandlerC53E2FCC": {
      "DependsOn": [
        "CustomMaciePutClassificationExportConfigurationCustomResourceProviderRoleEB42D531",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomMaciePutClassificationExportConfigurationCustomResourceProviderRoleEB42D531",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomMaciePutClassificationExportConfigurationCustomResourceProviderLogGroup727354F4": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsKeyId": {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "CustomMaciePutClassificationExportConfigurationCustomResourceProviderHandlerC53E2FCC",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomMaciePutClassificationExportConfigurationCustomResourceProviderRoleEB42D531": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "macie2:EnableMacie",
                    "macie2:GetClassificationExportConfiguration",
                    "macie2:GetMacieSession",
                    "macie2:PutClassificationExportConfiguration",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                  "Sid": "MaciePutClassificationExportConfigurationTaskMacieActions",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomSecurityHubBatchEnableStandardsCustomResourceProviderHandler4BE622C1": {
      "DependsOn": [
        "CustomSecurityHubBatchEnableStandardsCustomResourceProviderRole1ABC8ED2",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomSecurityHubBatchEnableStandardsCustomResourceProviderRole1ABC8ED2",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomSecurityHubBatchEnableStandardsCustomResourceProviderLogGroup51D3B0EA": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsKeyId": {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "CustomSecurityHubBatchEnableStandardsCustomResourceProviderHandler4BE622C1",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomSecurityHubBatchEnableStandardsCustomResourceProviderRole1ABC8ED2": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "securityhub:BatchDisableStandards",
                    "securityhub:BatchEnableStandards",
                    "securityhub:DescribeStandards",
                    "securityhub:DescribeStandardsControls",
                    "securityhub:EnableSecurityHub",
                    "securityhub:GetEnabledStandards",
                    "securityhub:UpdateStandardsControl",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                  "Sid": "SecurityHubCreateMembersTaskSecurityHubActions",
                },
                {
                  "Action": [
                    "iam:CreateServiceLinkedRole",
                  ],
                  "Condition": {
                    "StringLike": {
                      "iam:AWSServiceName": "securityhub.amazonaws.com",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                  "Sid": "SecurityHubServiceLinkedRole",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomSsmGetParameterValueCustomResourceProviderHandlerAAD0E7EE": {
      "DependsOn": [
        "CustomSsmGetParameterValueCustomResourceProviderRoleB3AFDDB2",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomSsmGetParameterValueCustomResourceProviderRoleB3AFDDB2",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomSsmGetParameterValueCustomResourceProviderLogGroup780D220D": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "CustomSsmGetParameterValueCustomResourceProviderHandlerAAD0E7EE",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomSsmGetParameterValueCustomResourceProviderRoleB3AFDDB2": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "ssm:GetParameters",
                    "ssm:GetParameter",
                    "ssm:DescribeParameters",
                  ],
                  "Effect": "Allow",
                  "Resource": [
                    "*",
                  ],
                  "Sid": "SsmGetParameterActions",
                },
                {
                  "Action": [
                    "sts:AssumeRole",
                  ],
                  "Effect": "Allow",
                  "Resource": [
                    {
                      "Fn::Join": [
                        "",
                        [
                          "arn:",
                          {
                            "Ref": "AWS::Partition",
                          },
                          ":iam::*:role/AWSAccelerator*",
                        ],
                      ],
                    },
                  ],
                  "Sid": "StsAssumeRoleActions",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "EbsDefaultVolumeEncryption55012F7A": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CustomEbsDefaultVolumeEncryptionCustomResourceProviderLogGroupB7212213",
      ],
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomEbsDefaultVolumeEncryptionCustomResourceProviderHandler6551B35B",
            "Arn",
          ],
        },
        "kmsKeyId": {
          "Fn::Select": [
            1,
            {
              "Fn::Split": [
                "/",
                {
                  "Fn::Select": [
                    5,
                    {
                      "Fn::Split": [
                        ":",
                        {
                          "Ref": "SsmParameterValueacceleratorkmskey1keyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
      "Type": "Custom::EbsDefaultVolumeEncryption",
      "UpdateReplacePolicy": "Delete",
    },
    "EbsDefaultVolumeEncryptionParameter61CF6625": {
      "Properties": {
        "Name": "/accelerator/security-stack/ebsDefaultVolumeEncryptionKeyArn",
        "Type": "String",
        "Value": {
          "Ref": "SsmParameterValueacceleratorkmskey1keyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "GuardDutyPublishingDestination52AE4412": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderLogGroup118A06DB",
      ],
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderHandlerB3AE4CE8",
            "Arn",
          ],
        },
        "destinationArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":s3:::aws-accelerator-central-logs-333333333333-us-west-2/guardduty",
            ],
          ],
        },
        "exportDestinationOverride": true,
        "exportDestinationType": "S3",
        "kmsKeyArn": {
          "Ref": "CentralLogsBucketKeyLookup52CD8A37",
        },
        "region": "us-east-1",
      },
      "Type": "Custom::GuardDutyCreatePublishingDestinationCommand",
      "UpdateReplacePolicy": "Delete",
    },
    "IamPasswordPolicy7117FCDB": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderLogGroup69C2279A",
      ],
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderHandler63EDC7F4",
            "Arn",
          ],
        },
        "allowUsersToChangePassword": true,
        "hardExpiry": false,
        "maxPasswordAge": 90,
        "minimumPasswordLength": 14,
        "passwordReusePrevention": 24,
        "requireLowercaseCharacters": true,
        "requireNumbers": true,
        "requireSymbols": true,
        "requireUppercaseCharacters": true,
      },
      "Type": "Custom::IamUpdateAccountPasswordPolicy",
      "UpdateReplacePolicy": "Delete",
    },
    "SecurityHubStandards294083BB": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CustomSecurityHubBatchEnableStandardsCustomResourceProviderLogGroup51D3B0EA",
      ],
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomSecurityHubBatchEnableStandardsCustomResourceProviderHandler4BE622C1",
            "Arn",
          ],
        },
        "region": "us-east-1",
        "standards": [
          {
            "controlsToDisable": [
              "IAM.1",
              "EC2.10",
              "Lambda.4",
            ],
            "enable": true,
            "name": "AWS Foundational Security Best Practices v1.0.0",
          },
          {
            "controlsToDisable": [
              "PCI.IAM.3",
              "PCI.S3.3",
              "PCI.EC2.3",
              "PCI.Lambda.2",
            ],
            "enable": true,
            "name": "PCI DSS v3.2.1",
          },
          {
            "controlsToDisable": [
              "CIS.1.20",
              "CIS.1.22",
              "CIS.2.6",
            ],
            "enable": true,
            "name": "CIS AWS Foundations Benchmark v1.2.0",
          },
        ],
      },
      "Type": "Custom::SecurityHubBatchEnableStandards",
      "UpdateReplacePolicy": "Delete",
    },
    "SsmParamAcceleratorVersionFF83282D": {
      "Properties": {
        "Name": "/accelerator/AWSAccelerator-SecurityStack-111111111111-us-east-1/version",
        "Type": "String",
        "Value": "1.4.3",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "SsmParamStackId521A78D3": {
      "Properties": {
        "Name": "/accelerator/AWSAccelerator-SecurityStack-111111111111-us-east-1/stack-id",
        "Type": "String",
        "Value": {
          "Ref": "AWS::StackId",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
  },
}
`;
